src/style/_typography.scss
@use "breakpoints" as *;

h1:not(.code-preview h1),
h2:not(.code-preview h2),
h3:not(.code-preview h3),
h4:not(.code-preview h4),
h5:not(.code-preview h5),
h6:not(.code-preview h6) {
    font-family: var(--docs-heading-font-family);
    line-height: var(--docs-heading-line-height);
    margin-top: 0;
    margin-bottom: 0.25rem;
    text-wrap: balance;
    text-wrap: pretty;
}

h1 {
    font-size: var(--f-font-size-h1);
    font-weight: var(--docs-heading-font-weight-h1);
    color: var(--f-text-color-heading-1);
}

h2 {
    font-size: var(--f-font-size-h2);
    font-weight: var(--docs-heading-font-weight-h2);
    color: var(--f-text-color-heading-2);
}

h3 {
    font-size: var(--f-font-size-h3);
    font-weight: var(--docs-heading-font-weight-h3);
    color: var(--f-text-color-heading-3);
}

h4 {
    font-size: var(--f-font-size-h4);
    font-weight: var(--docs-heading-font-weight-h4);
    color: var(--f-text-color-heading-4);
}

h5 {
    font-size: var(--f-font-size-large);
    font-weight: var(--docs-heading-font-weight-h5);
    color: var(--f-text-color-heading-5);
}

h6 {
    font-size: var(--f-font-size-standard);
    font-weight: var(--docs-heading-font-weight-h6);
    color: var(--f-text-color-heading-6);
}

h1,
h2,
h3,
h4,
h5,
h6 {
    > a {
        text-decoration: none;
    }
}

* + h1,
* + h2,
* + h3,
* + h4,
* + h5,
* + h6 {
    margin-top: 2rem;
}

@media (width <=$breakpoint-sm) {
    h1 {
        font-size: var(--f-font-size-h2);
    }

    h2 {
        font-size: var(--f-font-size-xxx-large);
    }

    h3 {
        font-size: var(--f-font-size-h4);
    }

    h4 {
        font-size: var(--f-font-size-large);
    }

    h5 {
        font-size: var(--f-font-size-standard);
    }

    h6 {
        font-size: var(--f-font-size-standard);
    }
}

@for $i from 1 through 5 {
    h#{$i} + h#{$i + 1} {
        margin-top: 1rem;
    }
}

.docs-paragraph {
    font-size: var(--docs-font-size);
    font-weight: var(--docs-font-weight);
    line-height: var(--docs-line-height);
    margin-bottom: 1rem;
}

b,
strong {
    font-weight: var(--f-font-weight-medium);
}

code {
    font-size: var(--docs-font-size);
    border-radius: var(--f-border-radius-small);
    font-family: var(--f-font-family-code);
    background-color: var(--docs-code-background-color);
    display: inline-block;
    margin: 0 0.25rem;
    padding: 0 0.25rem;
}

pre {
    code {
        display: block;
    }
}

